--- a/frontEndDasar/JavaScript/7. while loop/index.html
+++ b/frontEndDasar/JavaScript/7. while loop/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arrays</title>
+    <title>while loop
+    </title>
+    <script src="app.js"></script>
 </head>
 <body>
-    <script src="app.js"></script>
+    
 </body>
 </html>
